kubernetes/apps/prowlarr/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: prowlarr-ingress
  namespace: media
  annotations:
    external-dns.kubernetes.io/target: infra-int
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`prowlarr.sobrinho.pt`)
      kind: Rule
      services:
        - name: prowlarr
          port: main
  tls:
    secretName: prowlarr-cert
